<resources>
    <string name="app_name">rock_paper_scissors_lizard_spok</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="spok">Spok</string>
    <string name="scissors">Scissors</string>
    <string name="rules">Rules</string>
    <string name="lizard">lizard</string>
    <string name="here_the_computer_chose">here the computer chose</string>
    <string name="play">Play</string>
    <string name="rulesbuttontext">rules</string>
    <string name="winText">You WIN!!</string>
    <string name="loseText">You LOSE!!</string>
    <string name="drawText">DRAW!!!!</string>
    <string name="startText">Press \'start\' play.</string>
</resources>