<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ComputerChoose"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/here_the_computer_chose"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/ResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="texttexttexttext"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/ComputerChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <ImageButton
        android:id="@+id/RockButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/rock"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/rock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultText"
        android:layout_marginTop="50dp"
        />

    <ImageButton
        android:id="@+id/PaperButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/paper"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/paper"
        app:layout_constraintTop_toBottomOf="@+id/RockButton"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/SpokButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/spok"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/spok"
        app:layout_constraintStart_toEndOf="@+id/RockButton"
        app:layout_constraintTop_toTopOf="@+id/RockButton"
        app:layout_constraintBottom_toBottomOf="@+id/PaperButton"
        app:layout_constraintEnd_toStartOf="@+id/ScissorsButton"
        />

    <ImageButton
        android:id="@+id/ScissorsButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/scissors"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/scissors"
        app:layout_constraintStart_toEndOf="@+id/SpokButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RockButton"
        />

    <ImageButton
        android:id="@+id/LizardButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/lizard"
        android:contentDescription="@string/lizard"
        app:layout_constraintTop_toBottomOf="@+id/ScissorsButton"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/PaperButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>